[package]
name = "vulkano-cube"
version = "0.1.0"
authors = ["tripv"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = {git="https://github.com/vulkano-rs/vulkano", rev="fb3ef9d43e924f5bbff7dd9021544db4e8bd916d"}
vulkano-shaders = {git="https://github.com/vulkano-rs/vulkano", rev="fb3ef9d43e924f5bbff7dd9021544db4e8bd916d"}
vulkano-win = {git="https://github.com/vulkano-rs/vulkano", rev="fb3ef9d43e924f5bbff7dd9021544db4e8bd916d"}
winit = "0.19"